# Rusty

./: README.md
Cargogenerate/hello_world/: Cargo.toml
Cargogenerate/hello_world/src/: main.rs
EmbeddedSummerDays/Warmup/: Cargo.toml
HelloWorld/: Cargo.toml
HelloWorld/src/: helloworld.rs
adder/: Cargo.toml
adder/src/: lib.rs
conditional/: Cargo.toml
conditional/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
philosopher_concurrency/: Cargo.toml  README.md
philosopher_concurrency/src/: main.rs
